--- a/Clinics.vcxproj.filters
+++ b/Clinics.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClInclude Include="Boleto.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Appointment.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ExecuteMenu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Doutor.cpp">
@@ -54,6 +60,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Boleto.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Appointment.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ExecuteMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
